fixed padding issue on mobile

--- a/src/styles/feed.css
+++ b/src/styles/feed.css
@@ -9,7 +9,7 @@
 
 @media(max-width: 890px){
     .feed{
-        padding: 0 0;
+        padding: 30px 0;
     }
     
 }
